// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination has a go to page function 1`] = `
<blaze-pagination
  class="hydrated"
  pages="15"
>
  
  <nav
    class="c-pagination"
  >
    <button
      class="c-pagination__control"
      disabled=""
    >
      ‹
    </button>
    <div
      class="c-pagination__pages"
    >
      
      <button
        aria-current="true"
        class="c-pagination__control"
      >
        1
      </button>
      <button
        class="c-pagination__control"
      >
        2
      </button>
    </div>
    <button
      class="c-pagination__control"
    >
      ›
    </button>
  </nav>
</blaze-pagination>
`;

exports[`Pagination has a go to page function 2`] = `
<blaze-pagination
  class="hydrated"
  pages="15"
>
  
  <nav
    class="c-pagination"
  >
    <button
      class="c-pagination__control"
    >
      ‹
    </button>
    <div
      class="c-pagination__pages"
    >
      <button
        class="c-pagination__control"
      >
        3
      </button>
      <button
        aria-current="true"
        class="c-pagination__control"
      >
        4
      </button>
      <button
        class="c-pagination__control"
      >
        5
      </button>
    </div>
    <button
      class="c-pagination__control"
    >
      ›
    </button>
  </nav>
</blaze-pagination>
`;

exports[`Pagination renders the correct buttons when pages set 1`] = `
<blaze-pagination
  class="hydrated"
  pages="15"
>
  
  <nav
    class="c-pagination"
  >
    <button
      class="c-pagination__control"
      disabled=""
    >
      ‹
    </button>
    <div
      class="c-pagination__pages"
    >
      
      <button
        aria-current="true"
        class="c-pagination__control"
      >
        1
      </button>
      <button
        class="c-pagination__control"
      >
        2
      </button>
    </div>
    <button
      class="c-pagination__control"
    >
      ›
    </button>
  </nav>
</blaze-pagination>
`;

exports[`Pagination should work without parameters 1`] = `
<blaze-pagination
  class="hydrated"
>
  
  <nav
    class="c-pagination"
  >
    <button
      class="c-pagination__control"
      disabled=""
    >
      ‹
    </button>
    <div
      class="c-pagination__pages"
    >
      
      <button
        aria-current="true"
        class="c-pagination__control"
      >
        1
      </button>
      
    </div>
    <button
      class="c-pagination__control"
      disabled=""
    >
      ›
    </button>
  </nav>
</blaze-pagination>
`;
